# wireshark-pubsec-dissectors

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  omni.lua  pyproject.toml  rtmx.yaml  tak.lua
.devcontainer/: Dockerfile  devcontainer.json
docs/: rtm_database.csv
docs/requirements/SETUP/: REQ-INIT-001.md
tests/: conftest.py  generate_test_pcaps.py  lua_bridge.py  test_cot_xml.py  test_errors.py  test_omni.py  test_protobuf.py  test_tak_protobuf.py  test_wireshark.py  wireshark_mock.lua
tests/fixtures/cot_examples/: TAK-Server-Destination.cot
tests/fixtures/pcaps/: omni_protobuf.pcap  tak_omni_mixed.pcap  tak_protobuf.pcap  tak_xml_cot.pcap
