[project]
name = "wireshark-tak-plugin"
version = "2.0.0"
description = "Wireshark Lua plugin for TAK/CoT/OMNI protocol dissection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "lupa>=2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "lupa>=2.0",
    "rtmx>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "req(req_id): Link test to requirement ID for RTMX traceability",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tests"]
omit = ["tests/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
